<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormFragment">

    <EditText
        android:id="@+id/editNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nome_da_tarefa"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:singleLine="false"
        android:textColorHighlight="#050505"
        android:textColorHint="#757575"
        app:guidelineUseRtl="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/descricao_da_tarefa"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHighlight="#050505"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNome" />

    <EditText
        android:id="@+id/editResponsavel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/responsavel"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHighlight="#050505"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescricao" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/data"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHighlight="#050505"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editResponsavel" />

    <Switch
        android:id="@+id/switchAtivoCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:scrollbarSize="10dp"
        android:text="@string/em_andamento"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDate" />

    <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:scrollbarSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchAtivoCard"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#8E7C06"
        android:text="@string/salvar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategoria" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#FF8E7C06"
        android:text="Cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategoria" />
</androidx.constraintlayout.widget.ConstraintLayout>